--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -1,27 +1,8 @@
-name: Deploy Dev on Self-hosted EC2
-
-on:
-  push:
-    branches: [ "master" ]
-
-jobs:
-  deploy:
-    runs-on: self-hosted
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Start Vite Dev Server with PM2
-        run: |
-          # Start or restart Vite dev server using PM2
-          pm2 start npm --name "vite-dev" -- run dev || pm2 restart vite-dev
-
-          # Enable PM2 to auto-start on reboot
-          pm2 startup
-
-          # Save PM2 process list so it restores on reboot
-          pm2 save
+- name: Install and Restart on EC2 with PM2
+  run: |
+    ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+      cd /home/${{ secrets.EC2_USER }}/app
+      npm install
+      pm2 start npm --name "vite-dev" -- run dev || pm2 restart vite-dev
+      pm2 save
+    EOF
